--- a/cicd-jenkins.adoc
+++ b/cicd-jenkins.adoc
@@ -481,7 +481,15 @@ Para realizar el despliegue, deberás permitir que Jenkins ejecute unos comandos
 .Esquema de despliegue con Jenkins
 image::deploy-schema-full.png[role="thumb", align="center"]
 
-Para ello, debes generar una nueva pareja de claves que usaremos para el despliegue, utilizando el comando ssh-keygen. Realiza los siguientes pasos: 
+Para ello, los pasos que se detallan a continuación permiten: 
+
+- generar una nueva pareja de claves que usaremos para el despliegue,
+- copiar la clave pública generada en la instancia de despliegue,
+- y por último probar que la conexión se realiza correctamente. 
+
+Ejecuta los siguientes pasos: 
+
+==== Generar la nueva pareja de claves de despliegue
 
 . Conecta por SSH a la máquina Jenkins: `ssh ubuntu@__instancia-jenkins__`
 
@@ -489,15 +497,17 @@ Para ello, debes generar una nueva pareja de claves que usaremos para el desplie
 image::ssh-from-developer-to-jenkins.png[role="thumb", align="center"]
 
 [start=2]
-. Crea la carpeta donde se van a guardar la pareja de claves: `mkdir /home/ubuntu/jenkins_home/.ssh`
+. Crea la carpeta donde se va a guardar la nueva pareja de claves: `mkdir /home/ubuntu/jenkins_home/.ssh`
 . Crea una pareja de claves ssh de despliegue: `ssh-keygen -t rsa -b 4096`
 . Cuando pida el *nombre*, escribe el nuevo nombre *id_rsa_deploy* junto con la ubicación donde Jenkins va a buscar las claves de forma predeterminada, que es: `/home/ubuntu/jenkins_home/.ssh/*id_rsa_deploy*`
 . Por último, deja la contraseña en blanco (pulsa ENTER): `Enter passphrase (empty for no passphrase):`
 
-Esto crea la clave privada en `/home/ubuntu/jenkins_home/.ssh/*id_dsa_deploy*` y una clave pública asociada en `/home/ubuntu/jenkins_home/.ssh/*id_dsa_deploy.pub*`. Esta nueva pareja de claves la usaremos exclusivamente para el despliegue de nuestros proyectos.
+Esto crea la clave privada en `/home/ubuntu/jenkins_home/.ssh/*id_dsa_deploy*` y una clave pública asociada en `/home/ubuntu/jenkins_home/.ssh/*id_dsa_deploy.pub*`. Esta nueva pareja de claves la usaremos exclusivamente para el despliegue de nuestros proyectos. Al haberlos guardado en la carpeta `/home/ubuntu/jenkins_home/` los archivos están accesibles dentro del contenedor, porque recuerda que esa carpeta la habíamos mapeado con la carpeta `/var/jenkins_home` del contenedor.
 
 .Pareja de claves __id_rsa_deploy__
 image::jenkins-ls-deploy-keys.png[role="thumb", align="center"]
+
+==== Copiar la clave pública a la instancia de despliegue
 
 [start=6]
 . Muestra el contenido de la clave pública: `cat /home/ubuntu/jenkins_home/.ssh/id_rsa_deploy.pub`
@@ -506,7 +516,7 @@ image::jenkins-ls-deploy-keys.png[role="thumb", align="center"]
 .Copia el contenido de __id_rsa_deploy.pub__
 image::jenkins-cat-public-key.png[role="thumb", align="center"]
 
-[start=7]
+[start=8]
 . Ahora pégalo en tu PC, lo necesitaremos más adelante.
 . Desconecta de la máquina Jenkins: `exit`
 . Conecta por ssh a la instancia de despliegue
@@ -514,10 +524,20 @@ image::jenkins-cat-public-key.png[role="thumb", align="center"]
 .Conexión SSH a la instancia Jenkins
 image::ssh-from-developer-to-deploy.png[role="thumb", align="center"]
 
-[start=10]
+[start=11]
 . Edita el archivo `authorized_keys`:  `nano home/ubuntu/.ssh/authorized_keys`
 . Ese archivo ya tenía una clave pública, la correspondiente a tu pareja de claves personal que inyectamos en la creación de la instancia con Terraform (por eso has podido conectar por ssh a esa máquina). Pega el contenido de la clave pública de despliegue. Ahora debe tener 2 claves públicas.
 . Ya puedes desconectar de la instancia de despliegue.
+
+
+==== Prueba de la conexión desde jenkins a despliegue
+
+Vamos a probar que funciona:
+
+.Conexión SSH desde la instancia Jenkins a la de despliegue
+image::jenkins-ssh-to-deploy.png[role="thumb", align="center"]
+
+[start=14]
 . Conecta de nuevo a la instancia jenkins y prueba la conexión ssh a la instancia de despliegue. Recuerda que puesto que Jenkins se está ejecutando como un contenedor, debes probar la conexión ssh desde dentro del contenedor: 
 
 [source,bash,subs="verbatim,quotes"]
@@ -532,24 +552,46 @@ En el comando anterior:
 - `ssh ubuntu@__instancia_deploy__ -i /var/jenkins_home/.ssh/id_rsa_deploy` es el comando a ejecutar en el contenedor. En este caso, `ssh` con el parámetro `-i ...` para indica la clave privada que debe usar para conectar. 
 - Recuerda que `/var/jenkins_home` es la carpeta HOME del usuario _jenkins_ dentro del contenedor, y _jenkins_ es el usuario del contenedor que ejecuta Jenkins.
 
-[start=14]
-. La primera vez que realizas una conexión ssh desde un usuario en una máquina origen a una destino, te pregunta si deseas almacenar la clave de host de de destino en la lista de máquinas conocidas (`known_hosts`) de tu máquina origen. Contesta: `yes`
+[start=15]
+. La primera vez que realizas una conexión ssh desde un usuario en una máquina origen a una destino, te pregunta si deseas almacenar la clave de host de destino en la lista de hosts conocidos (`known_hosts`) de tu máquina origen. Contesta: `yes`
 
 .Validar la clave del host: *yes*
 image::ssh-host-autentication.png[role="thumb", align="center"]
 
-[start=15]
-. Si todo ha ido bien, la conexión se ha debido realizar. Sal con `exit`.
+[start=16]
+. Si todo ha ido bien, la conexión se ha debido realizar. Sal con `exit`. Si no ha sido así, verifica que la ruta al archivo de la clave privada es correcta, y que el nombre de la máquina de despliegue es correcto. 
+
 . Comprueba que la clave de host de la máquina de destino (despliegue) se ha guardado en la máquina origen (jenkins) en el archivo `~/.ssh/known_hosts` del usuario que ha ejecutado el comando ssh, en nuestro caso, del usuario jenkins de contenedor: `docker exec -it jenkins-docker cat /var/jenkins_home/.ssh/known_hosts`
 
 .Contenido del archivo *known_hosts* en el contenedor
 image::ssh-known_hosts.png[role="thumb", align="center"]
 
-[start=17]
+[start=18]
 . Puedes comprobar también el contenido de __known_hosts__ en el archivo `/home/ubuntu/jenkins_home/.ssh/known_hosts`, ya que recuerda que hay un volumen mapeado entre la carpeta local `/home/ubuntu/jenkins_home` y la carpeta del contenedor `/var/jenkins_home`.
 
 .Contenido del archivo *known_hosts* en la carpeta local
 image::ssh-known_hosts-local.png[role="thumb", align="center"]
+
+[start=19]
+. Entra en Jenkins y añade el siguiente comando al proyecto __hello_docker__ existente, sustituyendo __MAQUINA_DEPLOY__ por el nombre DNS de la máquina de despliegue.
+
+[source,bash,subs="verbatim,quotes"]
+----
+ssh -i ~/.ssh/id_rsa_deploy ubuntu@MAQUINA_DEPLOY "pwd && ls -la"
+----
+Como aclaración de este comando: 
+
+-	el parámetro `-i` indica la clave privada que queremos usar en la conexión ssh
+- `"pwd && ls -la"` son comandos básicos que ejecuta sobre la máquina remota. Hemos indicado estos comandos simplemente para probar que la conexión se realiza correctamente. 
+
+.Modificación del proyecto para que ejecute un comando sobre la instancia de despliegue
+image::jenksin-hello-docker-ssh-to-deploy.png[role="thumb", align="center"]
+
+Tras ejecutar el proyecto en Jenkins, el resultado debe ser correcto.
+
+.Salida por consola. El comando se ha ejecutado correctamente.
+image::jenksin-hello-docker-ssh-to-deploy-output.png[role="thumb", align="center"]
+
 
 
 == Ejemplo 1: Aplicación web Java. 
