--- a/cicd-jenkins.adoc
+++ b/cicd-jenkins.adoc
@@ -289,7 +289,7 @@ La imagen pública del contenedor de Jenkins está disponible en https://hub.doc
 Por tanto, vamos a crear una imagen personalizada del contenedor de Jenkins basándonos en la imagen pública e instalándo Docker dentro del contenedor.
 Lo más adecuado es que construyas la imagen de Jenkins con Docker en la propia máquina donde lo vamos a ejecutar, es decir en la instancia de jenkins. 
 
-Conecta por ssh a la instancia. Crea una carpeta `jenkins-docker` y crea el archivo `Dockerfile`. Usa el siguiente Dockerfile (descrito en esta entrada de __medium.com__:  https://medium.com/@gustavo.guss/jenkins-building-docker-image-and-sending-to-registry-64b84ea45ee9[Jenkins Building Docker Image and Sending to Registry]).
+Conecta por ssh a la instancia. Crea una carpeta `jenkins-docker` y crea el archivo `Dockerfile`. Usa el siguiente Dockerfile (descrito en esta entrada de __medium.com__:  https://medium.com/@gustavo.guss/jenkins-building-docker-image-and-sending-to-registry-64b84ea45ee9[Jenkins Building Docker Image and Sending to Registry].
 
 .Dockerfile
 [source, docker]
@@ -841,12 +841,27 @@ Además, Si tu proyecto está en un repositorio público en GitHub, puedes ahorr
 
 === Despliegue en la VM
 
-.Por completar
-****
-De aquí en adelante está por completar. En breve lo actualizaré.
+Para desplegar la aplicación PetClinic en la instancia de despliegue vamos a copiar sobre ella el archivo JAR y a continuación ejecutaremos en ella la orden de java para ponerla en marcha: 
 
-Gracias por vuestra paciencia.
-****
+Copia este nueva fase en tu pipeline, sustituyendo DEPLOY_MACHINE por el nombre DNS de tu instancia: 
+
+[source,groovy]
+----
+  stage('Deploy'){
+    steps {
+      sh '''
+        ssh -i ~/.ssh/id_rsa_deploy ubuntu@DEPLOY_MACHINE "mkdir -p ~/spring-petclinic" <1>
+        scp -i ~/.ssh/id_rsa_deploy $WORKSPACE/target/*.jar ubuntu@DEPLOY_MACHINE:~/spring-petclinic <2>
+        ssh -i ~/.ssh/id_rsa_deploy ubuntu@DEPLOY_MACHINE "if pgrep java; then pkill java; fi" <3>
+        ssh -i ~/.ssh/id_rsa_deploy ubuntu@DEPLOY_MACHINE "nohup java -jar ~/spring-petclinic/*.jar > ~/spring-petclinic/yourservice.log 2>&1 &" <4>
+      '''
+    }
+  }
+----
+<1> Crea la carpeta `spring-petclinic` dentro de la carpeta HOME del usuario `ubuntu` en la máquina de despliegue
+<2> Copia con `scp` el archivo `.jar`, que se ha generado tras la construcción con maven, en la máquina de despligue
+<3> Detiene el proceso `java` si existe de un despliegue anterior.
+<4> Ejecuta la aplicación java empaquetada en el `.jar`, en background y con `nohup`, que hace que el proceso siga funcionando incluso si el usuario que lo inició cierra la sesión. De esta manera finaliza el comando ssh y el proceso sigue funcionando, es decir, la aplicación PetClinic estará desplegada y funcionando. 
 
 ****
 Referencias:
@@ -854,16 +869,31 @@ Referencias:
 . https://medium.com/@weblab_tech/how-to-publish-artifacts-in-jenkins-f021b17fde71[How to build on Jenkins and publish artifacts via ssh with Pipelines]
 ****
 
-=== Deploy en un Docker container
+=== Despliegue en un contenedor Docker
 
-Para https://spring.io/guides/gs/spring-boot-docker/[crear el contendedor de Docker] que empaquete la aplicación PetClinic basada en Spring Boot, vamos a definir el siguiente `Dockerfile`:
+.Por completar
+****
+De aquí en adelante está por completar. En breve lo actualizaré.
+
+Gracias por vuestra paciencia.
+****
+
+Para realizar el despliegue de PetClinic como contenedor, primero tenemos que https://www.callicoder.com/spring-boot-docker-example/[dockerizar] la aplicación, luego publicar la imagen de contenedor en un registro, y por último ejecutar el contenedor en la instancia de despliegue.
+
+Para https://spring.io/guides/gs/spring-boot-docker/[crear el contendedor de Docker] que empaquete la aplicación PetClinic , vamos a definir el siguiente `Dockerfile`:
 
 .Dockerfile
 [source, docker]
 ----
+# Start with a base image containing Java runtime
 FROM openjdk:8-jdk-alpine
+# Make port 8080 available to the world outside this container
+EXPOSE 8080
+# The application's jar file
 ARG JAR_FILE=target/*.jar
+# Copy the application's jar to the container
 COPY ${JAR_FILE} app.jar
+# Run the jar file
 ENTRYPOINT ["java","-jar","/app.jar"]
 ----
 
